Change to ExecutorService and timeouts (#3222)